crates/es-fluent-derive/tests/ui/fluent_label_ignored_resource.stderr
error: Attribute error in label container: `#[fluent(resource = ...)]` cannot be used in label container `LoginError`
       help: accepted parent keys here are domain and namespace
 --> tests/ui/fluent_label_ignored_resource.rs:6:10
  |
6 | #[fluent(resource = "login_error")]
  |          ^^^^^^^^
